--- a/src/aura/Datatable/Datatable.cmp
+++ b/src/aura/Datatable/Datatable.cmp
@@ -2,9 +2,9 @@
     
     <!-- handlers -->
     <aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
-    <aura:registerEvent name="datatableEvt" type="RDNACadence2:DatatableEvent"/>
+    <aura:registerEvent name="datatableEvt" type="RDNACadence:DatatableEvent"/>
     <aura:handler name="change" value="{! v.rawData }" action="{!c.doInit}"/>
-    <aura:handler name="cadencePagination" event="RDNACadence2:CadPagination" action="{!c.handleComponentEvent}"/>
+    <aura:handler name="cadencePagination" event="RDNACadence:CadPagination" action="{!c.handleComponentEvent}"/>
     
     <!-- datatable attributes -->
     <aura:attribute name="title" type="String"/>
@@ -110,15 +110,16 @@
         </aura:set>
     </aura:if>
     
+    <aura:if isTrue = "{!v.totalNumberOfRows > 0}">
     <aura:if isTrue = "{!empty(v.rawData)}">
         <div>
-            <RDNACadence2:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>	
+            <RDNACadence:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>	
         </div>
         
         <aura:set attribute="else">
             <div>
-                <RDNACadence2:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}"/>	
+                <RDNACadence:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}"/>	
             </div>
         </aura:set>
-    </aura:if>
+    </aura:if></aura:if>
 </aura:component>
