--- a/src/aura/Pagination/Pagination.cmp
+++ b/src/aura/Pagination/Pagination.cmp
@@ -18,7 +18,9 @@
             <lightning:button disabled="{!v.page == 0 || v.page == 1}" class="rdna-button-text-before slds-text-align_center slds-p-left_x-small slds-p-right_x-small"  aura:id="previousPage" variant="brand" label="Previous" onclick="{! c.previousPage }" />
             <lightning:button disabled="{!v.page >= v.pages}" class="rdna-button-text-before slds-text-align_center"  variant="brand" aura:id="nextPage" label="Next" onclick="{! c.nextPage }" />            
             <lightning:button disabled="{!v.page >= v.pages}" class="rdna-button-text-before slds-text-align_center"  aura:id="previousPage" variant="brand" label="Last" onclick="{! c.lastPage }" />
-            <span class="slds-m-left_small rdna-field-values">page {!v.page} of {!v.pages}</span>
+            <aura:if isTrue = "{!v.total > 0}">
+                <span class="slds-m-left_small rdna-field-values">page {!v.page} of {!v.pages}</span>
+            </aura:if>
         </div>
         
         <aura:if isTrue = "{!v.selectedNoOfRecords}">	
