--- a/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
+++ b/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
@@ -95,11 +95,11 @@
             <div class="slds-truncate rdna-div" aura:id="detailDiv1" title="Name">{!v.actionObject.Name}</div>
         </td>
         <td class="rdna-table-rows rdna-field-values">
-            <aura:if isTrue="{!v.cadenceAction.RDNACadence__Trigger_Type__c == 'Immediate'}">
+            <aura:if isTrue="{!v.cadenceAction.RDNACadence2__Trigger_Type__c == 'Immediate'}">
                 <span   aura:id="detailDiv1"> Immediate </span>
                 <aura:set attribute="else">
-                    <aura:if isTrue="{!v.cadenceAction.RDNACadence__Trigger_Type__c == 'Time Based'}">
-                        <span  aura:id="detailDiv1">{!'Days: ' + v.cadenceAction.RDNACadence__Day__c + ' Hours: ' + v.cadenceAction.RDNACadence__Hour__c}</span>
+                    <aura:if isTrue="{!v.cadenceAction.RDNACadence2__Trigger_Type__c == 'Time Based'}">
+                        <span  aura:id="detailDiv1">{!'Days: ' + v.cadenceAction.RDNACadence2__Day__c + ' Hours: ' + v.cadenceAction.RDNACadence2__Hour__c}</span>
                         <aura:set attribute="else">
                         <span  aura:id="detailDiv1"> </span>
                         </aura:set>
@@ -142,7 +142,7 @@
                                 <div aura:id="updatePriorityChanges" class="slds-form-element__control slds-size_1-of-4">
                                     <lightning:select aura:id="formValidationId" name="Action" 
                                                       label="Action" required="true" 
-                                                      value="{!v.cadenceAction.RDNACadence__Action_Id__c}" 
+                                                      value="{!v.cadenceAction.RDNACadence2__Action_Id__c}" 
                                                       onchange="{!c.setActionObject}"
                                                       disabled = "{!v.isDisabled}">
                                         <option value="">Select Action</option>
@@ -155,7 +155,7 @@
                                     <div aura:id="updatePriorityChanges" class="slds-form-element__control slds-size_1-of-4">
                                         <lightning:select aura:id="formValidationId" name="selectPriority" 
                                                           disabled = "{!v.isDisabled}" 
-                                                          label="Priority" required="true" value="{!v.cadenceAction.RDNACadence__Priority__c}" 
+                                                          label="Priority" required="true" value="{!v.cadenceAction.RDNACadence2__Priority__c}" 
                                                           messageWhenValueMissing="Please Select priority."
                                                           onchange="{!c.updatePriorityNumber}">
                                             <option value="">Select Priority</option>
@@ -168,7 +168,7 @@
                                 
                                 <div aura:id="updatePriorityChanges" class="slds-form-element__control slds-size_1-of-4">
                                     <lightning:select aura:id="formValidationId" name="selectActionType" 
-                                                      label="Execute After Delay" required="true" value="{!v.cadenceAction.RDNACadence__Trigger_Type__c}" 
+                                                      label="Execute After Delay" required="true" value="{!v.cadenceAction.RDNACadence2__Trigger_Type__c}" 
                                                       onchange="{! c.disablUnitInput }" disabled = "{!v.isDisabled}">
                                         <option value="">Select Trigger</option>
                                         <option value="Immediate">Immediate</option>
@@ -180,7 +180,7 @@
                                         <div class="slds-form-element__control slds-size_1-of-2">
                                             <lightning:input type="number" aura:id="formValidationId" label="Days"
                                                              name="actionname"
-                                                             value="{!v.cadenceAction.RDNACadence__Day__c}"
+                                                             value="{!v.cadenceAction.RDNACadence2__Day__c}"
                                                              placeholder = "Enter Days" pattern="[0-9]*" min="0"
                                                              messageWhenPatternMismatch="Days Can't be less than 0"
                                                              messageWhenRangeUnderflow="Days Can't be less than 0"
@@ -189,7 +189,7 @@
                                         <div class="slds-form-element__control slds-size_1-of-2">
                                             <lightning:input type="number" aura:id="formValidationId" label="Hours"
                                                              name="actionname"
-                                                             value="{!v.cadenceAction.RDNACadence__Hour__c}"
+                                                             value="{!v.cadenceAction.RDNACadence2__Hour__c}"
                                                              placeholder = "Enter Hours"  pattern="[0-9]*" max="23" min="0"
                                                              messageWhenPatternMismatch="Hours is not valid"
                                                              messageWhenBadInput="Please Enter valid Hours (0-23)"
@@ -213,16 +213,23 @@
                             <aura:if isTrue="{!v.setFieldsToUpdate}">
 
                                 <div class = "slds-form-element slds-size_1-of-1 slds-p-bottom_large" >
-                                    <aura:iteration items="{!v.rowToCreateFieldsToUpdate}" var="wrapperObj" indexVar="index">                                        
+                                    <!--<aura:iteration items="{!v.rowToCreateFieldsToUpdate}" var="wrapperObj" indexVar="index">                                        
                                         <div class = "slds-form-element__row slds-size_1-of-1">
-                                            <aura:if isTrue="{!'Lead' ==  v.newCadence.RDNACadence__Record_Type__c}">
-                                                <RDNACadence:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence__Record_Type__c}"
+                                            <aura:if isTrue="{!'Lead' ==  v.newCadence.RDNACadence2__Record_Type__c}">
+                                                <RDNACadence2:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence2__Record_Type__c}"
                                                                                      taskObj="{!wrapperObj}" wrapperTaskFields="{!v.wrapperLeadFields}" currentIndex = "{!index}" isrequired="true" isDisabled="{!v.isDisabled}"/>
                                                 <aura:set attribute="else">
-                                                    <RDNACadence:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence__Record_Type__c}"
+                                                    <RDNACadence2:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence2__Record_Type__c}"
                                                                                          taskObj="{!wrapperObj}" wrapperTaskFields="{!v.wrapperContactFields}" currentIndex = "{!index}" isrequired="true" isDisabled="{!v.isDisabled}"/>
                                                 </aura:set>
                                             </aura:if>
+                                        </div>
+                                    </aura:iteration>-->
+                                    <aura:iteration items="{!v.rowToCreateFieldsToUpdate}" var="wrapperObj" indexVar="index">                                        
+                                        <div class = "slds-form-element__row slds-size_1-of-1">
+                                            <c:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence__Record_Type__c}"
+                                                                                 UpdateFieldList = "{!v.UpdateFieldList}"
+                                                                                 taskObj="{!wrapperObj}" wrapperTaskFields="{!v.UpdateFieldList}" currentIndex = "{!index}" isrequired="true" isDisabled="{!v.isDisabled}"/>
                                         </div>
                                     </aura:iteration>
                                     <aura:if isTrue="{!not(v.isDisabled)}">
@@ -249,8 +256,9 @@
                                 <div class = "slds-form-element slds-size_1-of-1 slds-m-top_small slds-p-bottom_large" >
                                     <div class = "slds-form-element__row slds-size_1-of-1">
                                         <aura:if isTrue="{!v.setCriteriaFields}">
-                                            <aura:if isTrue="{!not(empty(v.contactFieldList) || empty(v.leadFieldList))}">
-                                                <RDNACadence:CriterionComponent aura:id="actionCriterionComponent" 
+                                            <aura:if isTrue="{!not(empty(v.UpdateFieldList))}">
+                                                <c:CriterionComponent aura:id="actionCriterionComponent" 
+                                                                                 AllFieldList = "{!v.UpdateFieldList}"  
                                                                                 criteriaType="Action Criteria" 
                                                                                 criteriaSet="{!v.entranceCriteriaSet}"  
                                                                                 cadence="{!v.newCadence}"
