--- a/src/aura/CadenceDetails/CadenceDetails.cmp
+++ b/src/aura/CadenceDetails/CadenceDetails.cmp
@@ -53,7 +53,7 @@
                         <option value="">Record Type</option>
                         <option value="Contact">Contact</option>
                         <option value="Lead">Lead</option>
-                        <!--<option value="Opportunity">Opportunity</option>-->
+                        <option value="Opportunity">Opportunity</option>
                     </lightning:select>
                 </div>
                 <div class="slds-form-element__control slds-size_1-of-4 rdna-field-lable">
