--- a/src/aura/ActionDetails/ActionDetails.cmp
+++ b/src/aura/ActionDetails/ActionDetails.cmp
@@ -12,7 +12,7 @@
    
   
     <!--Action Objects -->
-    <aura:attribute name="newAction" type="RDNACadence2__Action__c" default="{ 'sobjectType': 'RDNACadence2__Action__c', 'Name': '','RDNACadence2__Type__c':''}"/>
+    <aura:attribute name="newAction" type="ActionWrapper" default="{ 'sobjectType': 'ActionWrapper'}"/>
     <!--Task Objects -->
     <aura:attribute name="taskObj" type="Task" default="{ 'sobjectType': 'Task'}"/>
     <!--Email template list -->
@@ -77,7 +77,7 @@
                          <div class="slds-form-element__control slds-size_1-of-4">
                             <lightning:input aura:id="formValidationId" label="Name"
                                              name="actionname"
-                                             value="{!v.newAction.Name}"
+                                             value="{!v.newAction.name}"
                                              placeholder = "Enter Action Name"
                                              messageWhenBadInput = "Please Enter Name"
                                              required="true"/> 
@@ -85,7 +85,7 @@
                         <div class="slds-form-element__control slds-size_1-of-4  slds-m-left_medium">
                             <lightning:select class="select-auto-width" 
                                               aura:id="formValidationId" name="selectActionType" 
-                                              label="Type" required="true" value="{!v.newAction.RDNACadence2__Type__c}" 
+                                              label="Type" required="true" value="{!v.newAction.type}" 
                                               messageWhenValueMissing="Please Select Action Type."
                                               onchange="{!c.updateActionType}"
                                               disabled = "{!v.isDisabled || v.disableActionType}">
@@ -97,10 +97,10 @@
                                 <option value="Task" class="option-style">Task</option>
                             </lightning:select>
                         </div>
-                       <aura:if isTrue="{!v.newAction.RDNACadence2__Type__c == 'Email'}">                        
+                       <aura:if isTrue="{!v.newAction.type == 'Email'}">                        
                             <div class="slds-form-element__control slds-size_1-of-4 slds-m-left_medium">
                                 <lightning:select aura:id="formValidationId" name="selectActionType" 
-                                                  label="Activation Type" required="true" value="{!v.newAction.RDNACadence2__Activation_Type__c}" 
+                                                  label="Activation Type" required="true" value="{!v.newAction.activationType}" 
                                                   messageWhenValueMissing="Please Select Activation Type." disabled = "{!v.disableActivationType}">                                         
                                     <option value="" selected ="Select Activation Type">Select Activation Type</option>
                                     <option value="Automatic" class="option-style">Automatic</option>
@@ -115,7 +115,7 @@
                     <div class="slds-form-element__row slds-p-top_small">
                         <div class="slds-form-element__control slds-size_1-of-4 slds-p-bottom_large" aura:id = "InputSelectTemplate">
                             <lightning:select aura:id="formValidationId" name="selectActionType" 
-                                              label="Type" required="{!v.isActionTypeRequired}" value="{!v.newAction.RDNACadence2__Template_Id__c}" 
+                                              label="Type" required="{!v.isActionTypeRequired}" value="{!v.newAction.templateId}" 
                                               messageWhenValueMissing="Please Select Template Type."
                                               disabled = "{!v.isDisabled}">
                                 <option value="" class="option-style">No Template</option>
