--- a/src/aura/Datatable/Datatable.cmp
+++ b/src/aura/Datatable/Datatable.cmp
@@ -20,7 +20,8 @@
     <aura:attribute name="hideCheckboxColumn" type="boolean" default="false"/>
     <aura:attribute name="isListView" type="Boolean" default="false"/>
     <aura:attribute name="selectedNoOfRecords" type="Boolean" default="false"/> 
-    
+    <aura:attribute name="isTodayListView" type="Boolean" default="false"/>
+	
     <!-- pagination attributes -->
     <aura:attribute name="totalNumberOfRows" type="Integer" default="0"/>
     <aura:attribute name="currentPage" type="Integer" default="1"/>
@@ -28,13 +29,15 @@
     <aura:method name="clearRowSelection" action="{!c.deselectRows}"/> 
     <aura:handler name="change" value="{!v.data}" action="{!c.dataUpdated}"/> 
     <aura:if isTrue = "{! v.selectedNoOfRecords }">
-        <aura:if isTrue = "{!empty(v.rawDataForFilter)}">
+        <aura:if  isTrue="{!and(empty(v.rawDataForFilter), v.isTodayListView)}" >
+            <!--<aura:if isTrue = "{!empty(v.rawDataForFilter)}">-->
             <div class="slds-align_absolute-center" style="height: 300px;background-color:white">
                 <p class="rdna-style">There are currently no entries in your Today's List.
                     <p class="rdna-text">Leads and contacts will automatically be added to your today view based on sequence actions.</p>
                 </p></div>
             <aura:set attribute="else">
-                <aura:if isTrue = "{!empty(v.rawData)}">
+                <a<aura:if  isTrue="{!and(empty(v.rawData), v.isTodayListView)}" >
+                <!--<aura:if isTrue = "{!empty(v.rawData)}">-->
                     <div class="slds-align_absolute-center " style="height: 300px;background-color:white">
                         <p class="rdna-text-style">Sorry, We couldn't find any results with that name.</p>
                     </div>
@@ -118,7 +121,7 @@
         
         <aura:set attribute="else">
             <div>
-                <RDNACadence:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}"/>	
+                <RDNACadence:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}" isTodayListView="{!v.isTodayListView}"/>	
             </div>
         </aura:set>
     </aura:if><!--</aura:if>-->
