--- a/src/pages/ActionDetailView.page
+++ b/src/pages/ActionDetailView.page
@@ -1,4 +1,8 @@
 <apex:page standardcontroller="Action__c" sidebar="false" showHeader="true" tabStyle="Cadence_Actions_Classic__tab">
+<style type="text/css">        
+        .rdna-pageSelect { height: 27px !important; width: 62px !important;  border-radius: 6px !important; border-color: #cccccc !important;} 
+        .rdna-classic-datatableStyling {padding-right: 6px !important;}
+    </style>
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <div id="myDivId2" />
