--- a/src/pages/Cadence.page
+++ b/src/pages/Cadence.page
@@ -1,6 +1,8 @@
 <apex:page standardcontroller="Cadence__c" sidebar="false"  tabStyle="Cadence_Classic__tab" showHeader="true">
     <style type="text/css">
     .slds-button__icon_x-small { width: 0px !important; height: 0px !important;}
+	.rdna-pageSelect { height: 27px !important; width: 62px !important;  border-radius: 6px !important; border-color: #cccccc !important;} 
+    .rdna-classic-datatableStyling {padding-right: 6px !important;} 
     </style>
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
